Revision history for Bread::Board::LazyLoader

0.07 Monday, Oct. 6th 2014 

- added Module::Find into dependencies

0.06 Tuesday, Sep. 23th 2014 

- corrected tests

0.05 Tuesday, Sep. 16th 2014 

- added Bread::Board::LazyLoader::Site and Bread::Board::LazyLoader::Supersite modules

0.04 Wednesday, Aug. 20th 2014 

- added add_tree method

0.03 Friday, Dec. 16th  2013 

- corrected regular in test
- the subs returned from building files are cached by default

0.02 Tuesday, Nov. 19th  2013 

- initial release
