@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::Manifest v5.020.
+# This file was automatically generated by Dist::Zilla::Plugin::Manifest v5.029.
 Changes
 LICENSE
 MANIFEST
@@ -9,6 +9,7 @@ README.md
 dist.ini
 lib/Bread/Board/LazyLoader.pm
 lib/Bread/Board/LazyLoader/Container.pm
+lib/Bread/Board/LazyLoader/Role/Container.pm
 lib/Bread/Board/LazyLoader/Site.pm
 lib/Bread/Board/LazyLoader/Supersite.pm
 t/001-basic.t
