@@ -1,11 +1,11 @@
 
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.020.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.029.
 use strict;
 use warnings;
 
 
 
-use ExtUtils::MakeMaker ;
+use ExtUtils::MakeMaker;
 
 
 
@@ -26,7 +26,7 @@ my %WriteMakefileArgs = (
   "TEST_REQUIRES" => {
     "Test::Exception" => 0
   },
-  "VERSION" => "0.07",
+  "VERSION" => "0.08",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -35,6 +35,7 @@ my %WriteMakefileArgs = (
 
 my %FallbackPrereqs = (
   "Bread::Board" => "0.32",
+  "ExtUtils::MakeMaker" => 0,
   "Module::Find" => 0,
   "Test::Exception" => 0
 );
