@@ -1,15 +1,15 @@
 
 
 This archive contains the distribution Bread-Board-LazyLoader,
-version 0.07:
+version 0.08:
 
   lazy loader for Bread::Board containers
 
-This software is copyright (c) 2013 by Roman Daniel.
+This software is copyright (c) 2014 by Roman Daniel.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
 
 
-This README file was generated by Dist::Zilla::Plugin::Readme v5.020.
+This README file was generated by Dist::Zilla::Plugin::Readme v5.029.
 
