@@ -2,8 +2,8 @@ name    = Bread-Board-LazyLoader
 author  = Roman Daniel <roman.daniel@davosro.cz>
 license = Perl_5
 copyright_holder = Roman Daniel
-copyright_year   = 2013
-version = 0.07
+copyright_year   = 2014
+version = 0.08
 
 [Prereqs]
 Bread::Board = 0.32
