@@ -3,8 +3,10 @@ use warnings;
 
 use Bread::Board;
 
+
 sub {
     container shift() => as {
         service config => 'CONFIG';
+	service package => __PACKAGE__;
     };
 };
